--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "@editorjs/quote": "^2.5.0",
         "@flaticon/flaticon-uicons": "^2.4.0",
         "@material-tailwind/react": "^2.1.10",
-        "@reduxjs/toolkit": "^2.6.0",
         "@tailwindcss/postcss": "^4.0.8",
         "autoprefixer": "^10.4.20",
         "aws-sdk": "^2.1692.0",
@@ -44,10 +43,7 @@
         "next": "15.1.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-hot-toast": "^2.4.1",
-        "react-redux": "^9.2.0",
-        "redux-persist": "^6.0.0",
-        "redux-persist-cookie-storage": "^1.0.0"
+        "react-hot-toast": "^2.4.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
