added blog editor, Image uploader to s3 and remove unused components and models

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
         "paths": {
             "@/*": ["./*"],
             "@components/*": ["app/(client)/components/*"],
+            "@common/*": ["app/(client)/common/*"],
             "@context/*": ["app/(client)/context/*"],
             "@modals/*": ["app/(client)/components/modals/*"],
             "@styles/*": ["app/(client)/styles/*"]
