--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@flaticon/flaticon-uicons": "^2.4.0",
         "@material-tailwind/react": "^2.1.10",
         "@tailwindcss/postcss": "^4.0.8",
+        "@tanstack/react-query": "^5.67.2",
         "autoprefixer": "^10.4.20",
         "clsx": "^2.1.1",
         "cookies-next": "^5.1.0",
@@ -45,7 +46,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.1",
-        "slugify": "^1.6.6"
+        "slugify": "^1.6.6",
+        "swr": "^2.3.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
