--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.1",
+        "react-loading-skeleton": "^3.5.0",
         "slugify": "^1.6.6",
         "swr": "^2.3.3"
     },
